--- a/src/index.css
+++ b/src/index.css
@@ -1,12 +1,30 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+@font-face {
+  font-family: "Regular"; /*Can be any text*/
+  src: local("Roboto-Regular"),
+    url("./fonts/Roboto-Regular.ttf") format("truetype");
+}
+@font-face {
+  font-family: "Black"; /*Can be any text*/
+  src: local("Roboto-Black"), url("./fonts/Roboto-Black.ttf") format("truetype");
+}
+@font-face {
+  font-family: "Bold"; /*Can be any text*/
+  src: local("Roboto-Bold"), url("./fonts/Roboto-Bold.ttf") format("truetype");
+}
+@font-face {
+  font-family: "Light"; /*Can be any text*/
+  src: local("Roboto-Light"), url("./fonts/Roboto-Light.ttf") format("truetype");
+}
 
 #root {
   top: 0;
   left: 0;
   position: absolute;
   width: 100%;
+  font-family: "Regular";
 }
 .site-open {
   transition: all 0.3s ease;
